<resources>
    <string name="app_name">Organizer</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_locations">My Locations</string>
    <string name="events">Events</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_summary">Summary</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="event_details">Event Details</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="notification">Notification</string>
    <string name="remind">Remind at</string>
    <string name="remind_again">Remind again at</string>
    <string name="notification_exception">Input date and time of the event</string>
    <string name="expired_event_notification">Can not create notification on expired event</string>
    <string name="OK">OK</string>
    <string name="place">Place</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="choose">Choose</string>
    <string name="custom_location">Custom</string>
    <string name="new_location">Add new location</string>
    <string name="digest">Digest</string>
    <string name="powered_by_news_api">Powered by News API</string>
    <string name="powered_by_Dark_Sky">Powered by Dark Sky</string>
    <string name="network_error">Device is offline</string>

    <string-array name="remind_array">
        <item name="no_remind">No</item>
        <item name="remind_exact_time">Exact time</item>
        <item name="remind_five_minutes">Five minutes</item>
        <item name="remind_ten_minutes">Ten minutes</item>
        <item name="remind_half_hour">Half hour</item>
        <item name="remind_one_hour">One hour</item>
        <item name="remind_two_hours">Two hours</item>
        <item name="remind_one_day">One day</item>
        <item name="remind_two_days">Two days</item>
        <item name="remind_one_week">One Week</item>
    </string-array>
</resources>
